--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.4",
     "react-scripts": "^5.0.1",
-    "react-spinners": "^0.17.0"
+    "react-spinners": "^0.17.0",
+    "swiper": "^12.0.3"
   },
   "browserslist": {
     "production": [
